src: security: filter: JWTUtil: Fix issues flagged by SonarCloud
- Make repeatedly used string a constant
- Ensure the stream is immutable